HOMEからリポジトリを永続的に削除できるようにする
